Fix page grid alignment

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,5 +1,5 @@
 .Header {
-  padding: $space-large;
+  padding: $space-large 0;
   background-color: $color-buttery-white;
   background-size: cover;
   background-position: center center;
